--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,6 @@
   "buildCommand": "bundle exec jekyll build",
   "outputDirectory": "_site",
   "installCommand": "bundle install",
-  "framework": null,
-  "redirects": [
-    {
-      "source": "/(.*)",
-      "destination": "https://skabongo.github.io/$1",
-      "permanent": true
-    }
-  ]
+  "framework": null
 }
 
