back to normal github page

--- a/_config.yml
+++ b/_config.yml
@@ -28,23 +28,23 @@ url: "http://skabongo.github.io/" # the base hostname & protocol for your site, 
 disqus:
   shortname: salomons-website
 
-# google_analytics: UA-158544608-1
+google_analytics: UA-158544608-1
 
 # Build settings
 markdown: kramdown
 highlighter: rouge
 theme: minima
-plugins:
+gems:
   - jekyll-paginate
   - jekyll-gist
   - jekyll-feed
   - jemoji
   - jekyll-sitemap
+  - jekyll_video_tag
 
 exclude:
   - Gemfile
   - Gemfile.lock
-  - index.html
 kramdown:
   input: GFM
 
@@ -128,9 +128,9 @@ JB :
   #
   
   analytics :
-    provider : vercel
-    vercel :
-        enabled : true
+    provider : google
+    google :
+        tracking_id : 'UA-44085641-1'
     # getclicky :
     #   site_id :
     # mixpanel :
@@ -181,3 +181,6 @@ JB :
   # and include your custom code. Your custom file must be defined at:
   #   ./_includes/custom/[HELPER]
   # where [HELPER] is the name of the helper you are overriding.
+
+plugins:
+  - jekyll-sitemap
